test/compile-fail/resolution/use-mod-file-private-name/expected.txt
error: item `b` is private
 --> top.rhdl:2:7
  |
2 | use a::b;
  |        ^ private item
